--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ logging.level.es.upm.miw=DEBUG
 # Server web
 server.servlet.contextPath=/api/v0
 user.microservice=https://users-microservice-tfm.herokuapp.com
-provider.microservice=
+provider.microservice=https://prov-same-db-micro-tfm.herokuapp.com
 # User admin
 miw.admin.mobile=6
 miw.admin.username=admin
