--- a/src/main/resources/db.yml
+++ b/src/main/resources/db.yml
@@ -1,40 +1,26 @@
 # Providers
-providerList:
-  - &pr1
-    company: company-p1
-    nif: 12345678b
-    address: C/ TPV-provider, 1, 1A, 28000 Madrid
-    phone: 9166666601
-    email: p1@gmail.com
-    note: provider 1
-    active: true
-  - &pr2
-    company: company-p2
-    address: C/ TPV-provider, 2, 2A, 28000 Madrid
-    phone: 9166666602
-    note: provider 2
-    active: false
 
 # Articles
 articleList:
   - &ar1
     code: 8400000000017
+    providerId: pr1.id
     reference: Zz Falda T2
     description: Zarzuela - Falda T2
     retailPrice: 20
     stock: 10
     tax: GENERAL
     discontinued: false
-    provider: *pr1
   - &ar2
     code: 8400000000024
+    providerId: providerList[1].id
     reference: Zz Falda T4
     description: Zarzuela - Falda T4
     retailPrice: 27.8
     stock: 5
     tax: FREE
     discontinued: false
-    provider: *pr1
+    providerId: pr1.id
   - &ar3
     code: 8400000000031
     reference: ref-a3
@@ -43,7 +29,7 @@ articleList:
     stock: 8
     tax: GENERAL
     discontinued: false
-    provider: *pr1
+    providerId: pr1.id
   - &ar4
     code: 8400000000048
     description: descrip-a4
@@ -51,7 +37,7 @@ articleList:
     stock: 0
     tax: SUPER_REDUCED
     discontinued: true
-    provider: *pr2
+    providerId: pr2.id
   - &ar5
     code: 8400000000055
     reference: ref-a5
@@ -60,5 +46,5 @@ articleList:
     stock: 1
     tax: REDUCED
     discontinued: false
-    provider: *pr2
+    providerId: pr2.id
 
